--- a/menu-criollo.html
+++ b/menu-criollo.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="Imagenes/icon-la-gaviota.png" type="image/x-icon">
+    
     <title>Menú Evento</title>
 </head>
 <body>
