--- a/menu-gaviota.html
+++ b/menu-gaviota.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Imagenes/icon-la-gaviota.png" type="image/x-icon">
 
     <title>Menú Evento</title>
 </head>
